Fixed small issues Added support for the CI/CD